--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,11 +22,10 @@
             android:gravity="center"
             android:focusable="true"
             android:weightSum="1">
-
-         <!--   <ImageView
+   <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:src="@drawable/logo" />-->
+                android:src="@drawable/mom_new" />
         </LinearLayout>
 
         <LinearLayout
@@ -39,8 +38,7 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
-            <!--    <ImageView
+    <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="-350dp"
@@ -58,7 +56,7 @@
                     android:layout_gravity="bottom|end"
                     android:layout_marginEnd="-50dp"
                     android:layout_marginBottom="-50dp"
-                    android:src="@drawable/ellipse" />-->
+                    android:src="@drawable/ellipse" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
