--- a/app/src/main/res/layout/address_sign_up.xml
+++ b/app/src/main/res/layout/address_sign_up.xml
@@ -199,7 +199,7 @@
                         android:layout_height="@dimen/dp50"
                         android:clickable="false"
                         android:focusable="false"
-                        android:src="@drawable/upload"
+                        android:src="@drawable/ic_cloud_computing"
                         card_view:tint="@color/blueColor" />
 
                     <TextView
