--- a/app/src/main/res/layout/login_card.xml
+++ b/app/src/main/res/layout/login_card.xml
@@ -32,10 +32,11 @@
                 android:autofillHints="Email"
                 android:textColor="@color/black"
                 android:hint="Mobile No."
-                android:text=""
-                android:drawableLeft="@drawable/ic_baseline_email_24"
-                android:textColorHint="@color/hintColor"
-                android:inputType="textEmailAddress"/>
+                android:inputType="phone"
+                android:maxLength="20"
+                android:maxLines="1"
+                android:drawableLeft="@drawable/ic_call"
+                android:textColorHint="@color/hintColor"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -56,8 +57,9 @@
                 android:drawableLeft="@drawable/ic_baseline_lock_24"
                 android:drawablePadding="10dp"
                 android:textColor="@color/black"
-                android:hint="Password"
-                android:text="543210"
+                android:digits="@string/email_valid"
+                android:hint="@string/password"
+                android:maxLength="15"
                 android:textColorHint="@color/hintColor"
                 android:inputType="textPassword" />
         </LinearLayout>
