--- a/app/src/main/res/layout/payment_sign_up.xml
+++ b/app/src/main/res/layout/payment_sign_up.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
@@ -241,8 +242,8 @@
                     android:layout_height="@dimen/dp50"
                     android:clickable="false"
                     android:focusable="false"
-                    android:src="@drawable/upload"
-                    android:tint="@color/blueColor" />
+                    android:src="@drawable/ic_cloud_computing"
+                    app:tint="@color/blueColor" />
 
                 <TextView
                     android:id="@+id/txt_save"
