--- a/app/src/main/res/layout/personal_sign_up.xml
+++ b/app/src/main/res/layout/personal_sign_up.xml
@@ -103,7 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/dp10"
-            android:text="DOB"
+            android:text="Date Of Birth"
             android:textColor="@color/black"
             android:textSize="@dimen/sp16" />
 
@@ -260,6 +260,7 @@
                 android:hint="\@"
                 android:inputType="textEmailAddress"
                 android:maxLength="30"
+                android:textColorHint="@color/textColorDark"
                 android:maxLines="1"
                 android:paddingLeft="@dimen/dp10"
                 android:textColor="@color/black" />
@@ -310,7 +311,7 @@
             android:visibility="gone" />
 
 
-        <LinearLayout
+      <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -358,16 +359,26 @@
             </LinearLayout>
         </LinearLayout>
 
-        <Spinner
-            android:id="@+id/spinner_nation"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp10"
+            android:text="Nationality"
+            android:textColor="@color/black"
+            android:textSize="@dimen/sp16" />
+
+        <EditText
+            android:id="@+id/et_nationality"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp40"
-            android:layout_margin="@dimen/dp10"
-            android:layout_marginTop="@dimen/dp10"
-            android:background="@drawable/spinner_background"
-            android:entries="@array/country_name" />
-
-        <LinearLayout
+            android:layout_marginLeft="@dimen/dp10"
+            android:layout_marginRight="@dimen/dp10"
+            android:layout_marginBottom="@dimen/dp10"
+            android:background="@drawable/borderround_white"
+            android:maxLength="30"
+            android:maxLines="2"
+            android:paddingLeft="@dimen/dp10" />
+ <LinearLayout
             android:id="@+id/ll_save_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -378,10 +389,10 @@
             <ImageView
                 android:layout_width="@dimen/dp50"
                 android:layout_height="@dimen/dp50"
-                android:src="@drawable/upload"
+                app:srcCompat="@drawable/ic_cloud_computing"
                 android:focusable="false"
                 android:clickable="false"
-                android:tint="@color/blueColor" />
+                app:tint="@color/blueColor" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
