--- a/app/src/main/res/layout/address_sign_up.xml
+++ b/app/src/main/res/layout/address_sign_up.xml
@@ -57,7 +57,7 @@
                             android:layout_margin="@dimen/dp5"
                             android:ellipsize="end"
                             android:maxLines="2"
-                            android:text="Lake View Country Appartments"
+                            android:text=""
                             android:textColor="@color/white"
                             android:textSize="@dimen/sp14" />
 
@@ -69,7 +69,7 @@
                             android:ellipsize="end"
                             android:gravity="center"
                             android:maxLines="3"
-                            android:text="Lake View Country appartment Rd,Manipal country rd, behind Star Market,Singasandra,Bengulur,karanakata,560068"
+                            android:text=""
                             android:textColor="@color/white" />
                     </LinearLayout>
 
@@ -84,6 +84,7 @@
                             android:id="@+id/img_edit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            card_view:tint="@color/blueColor"
                             card_view:srcCompat="@drawable/ic_baseline_edit_24" />
 
                         <TextView
@@ -91,7 +92,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/dp10"
-                            android:text="Modify"
+                            android:text="Modify Address"
                             android:textSize="@dimen/sp14" />
                     </LinearLayout>
                 </LinearLayout>
@@ -139,7 +140,7 @@
                             android:layout_margin="@dimen/dp5"
                             android:ellipsize="end"
                             android:maxLines="2"
-                            android:text="Lake View Country Appartments"
+                            android:text=""
                             android:textColor="@color/white"
                             android:textSize="@dimen/sp14" />
 
@@ -151,7 +152,7 @@
                             android:ellipsize="end"
                             android:gravity="center"
                             android:maxLines="3"
-                            android:text="Lake View Country appartment Rd,Manipal country rd, behind Star Market,Singasandra,Bengulur,karanakata,560068"
+                            android:text=""
                             android:textColor="@color/white" />
                     </LinearLayout>
 
@@ -166,6 +167,7 @@
                             android:id="@+id/img_edit_residence"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            card_view:tint="@color/blueColor"
                             card_view:srcCompat="@drawable/ic_baseline_edit_24" />
 
                         <TextView
@@ -173,7 +175,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/dp10"
-                            android:text="Modify"
+                            android:text="Modify Address"
                             android:textSize="@dimen/sp14" />
                     </LinearLayout>
                 </LinearLayout>
