--- a/app/src/main/res/layout/payment_sign_up.xml
+++ b/app/src/main/res/layout/payment_sign_up.xml
@@ -17,8 +17,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/dp10"
             android:text="Bank account details"
+            android:fontFamily="@font/baumans_regular"
             android:textColor="@color/black"
-            android:textSize="@dimen/sp16" />
+            android:textSize="@dimen/sp20" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -55,7 +56,7 @@
                 android:background="@drawable/border_white_2"
                 android:ellipsize="end"
                 android:hint="Account Number*"
-                android:inputType="phone"
+                android:inputType="number"
                 android:maxLines="2"
                 android:padding="@dimen/dp10"
                 android:textColor="@color/black"
@@ -70,7 +71,10 @@
                 android:background="@drawable/border_white_2"
                 android:ellipsize="end"
                 android:hint="IFSC Code*"
+                android:digits="@string/alphabetNumeric"
+                android:inputType="textCapCharacters"
                 android:maxLines="2"
+                android:maxLength="15"
                 android:padding="@dimen/dp10"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black" />
@@ -173,7 +177,7 @@
                     android:background="@null"
                     android:ellipsize="end"
                     android:hint="Enter Mobile Number*"
-                    android:inputType="phone"
+                    android:inputType="number"
                     android:maxLines="2"
                     android:maxLength="10"
                     android:padding="@dimen/dp10"
