--- a/app/src/main/res/layout/sign_up_alert.xml
+++ b/app/src/main/res/layout/sign_up_alert.xml
@@ -6,7 +6,17 @@
     android:background="@drawable/borderwhite"
     android:gravity="center_horizontal"
     android:orientation="vertical">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/iv_close"
+            android:layout_width="@dimen/dp30"
+            android:layout_height="@dimen/dp30"
+            android:layout_gravity="right"
+            android:src="@drawable/ic_close" />
+    </FrameLayout>
     <LinearLayout
         android:id="@+id/ll_location"
         android:layout_width="wrap_content"
@@ -67,6 +77,7 @@
                 android:hint="Street Name"
                 android:maxLines="2"
                 android:maxLength="30"
+                android:singleLine="true"
                 android:padding="@dimen/dp10"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black" />
@@ -97,6 +108,7 @@
             android:maxLines="2"
             android:padding="@dimen/dp10"
             android:maxLength="30"
+            android:singleLine="true"
             android:textColor="@color/black"
             android:textColorHint="@color/black" />
 
@@ -106,7 +118,21 @@
             android:layout_marginTop="@dimen/dp10"
             android:orientation="horizontal"
             android:weightSum="1">
-
+            <EditText
+                android:id="@+id/et_pin"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp5"
+                android:layout_weight="0.5"
+                android:background="@drawable/border_white_2"
+                android:ellipsize="end"
+                android:hint="PIN"
+                android:maxLength="6"
+                android:inputType="number"
+                android:maxLines="2"
+                android:padding="@dimen/dp10"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black" />
             <EditText
                 android:id="@+id/et_city"
                 android:layout_width="0dp"
@@ -121,20 +147,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/black" />
 
-            <EditText
-                android:id="@+id/et_pin"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp5"
-                android:layout_weight="0.5"
-                android:background="@drawable/border_white_2"
-                android:ellipsize="end"
-                android:hint="PIN"
-                android:maxLength="6"
-                android:maxLines="2"
-                android:padding="@dimen/dp10"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black" />
+
         </LinearLayout>
 
         <LinearLayout
